time-picker: fix - ensure that outlines are fully visible in high contrast #6118 * Adds a z-index to the buttons and inputs in hover or focus state * Does not have any noticable change in regular contrast mode

--- a/src/components/time-picker/time-picker.scss
+++ b/src/components/time-picker/time-picker.scss
@@ -32,6 +32,7 @@
     &:focus {
       @apply bg-foreground-2
         outline-none;
+      z-index: theme("zIndex.header");
     }
     &:active {
       @apply bg-foreground-3;
@@ -62,11 +63,13 @@
       font-medium;
     &:hover {
       box-shadow: inset 0 0 0 2px var(--calcite-ui-foreground-2);
+      z-index: theme("zIndex.header");
     }
     &:focus,
     &:hover:focus {
       @apply outline-none;
       box-shadow: inset 0 0 0 2px var(--calcite-ui-brand);
+      z-index: theme("zIndex.header");
     }
   }
 
